# TuringMachine

./: CMakeLists.txt  README.md
src/: Q1.c  Q2.c  Q3.c  Q4.c  Q5.c  TuringMachine.cpp  TuringMachine.h  TuringMachine.ui  main.cpp
src/lib/: Q1.h  Q2.h  Q3.h  Q4.h  Q5.h
